
PIG-5269: MapReduceLauncher and MRJobStats imports org.python.google.common.collect.Lists instead of org.google.common.collect.Lists (nkollar via szita)

PIG-4700: Enable progress reporting for Tasks in Tez (satishsaley via rohini)

PIG-5251: Bump joda-time to 2.9.9 (dbist13 via rohini)
 
OPTIMIZATIONS
 
BUG FIXES

PIG-5374: Use CircularFifoBuffer in InterRecordReader (szita)

PIG-5373: InterRecordReader might skip records if certain sync markers are used (szita)

PIG-5370: Union onschema + columnprune dropping used fields (knoguchi)

PIG-5362: Parameter substitution of shell cmd results doesn't handle backslash (wlauer via rohini)

PIG-5355: Negative progress report by HBaseTableRecordReader (satishsaley via knoguchi)

PIG-5341: PigStorage with -tagFile/-tagPath produces incorrect results with column pruning (knoguchi)

PIG-5335: Error message from range projection completely misleading (knoguchi)

PIG-5333: LoadCaster sometimes not set for complex type (knoguchi)

PIG-5328: expressionOperator Divide.equalsZero(DataType.BIGDECIMAL) is invalid (michaelthoward via knoguchi)

PIG-5320: TestCubeOperator#testRollupBasic is flaky on Spark 2.2 (nkollar via szita)

PIG-5327: Check for DAG status before trying to kill (rohini)

PIG-5325: Schema disambiguation can't be turned off for nested schemas (szita)

PIG-5311: POReservoirSample fails for more than Integer.MAX_VALUE records (rohini)

PIG-3864: ToDate(userstring, format, timezone) computes DateTime with strange handling of Daylight Saving Time with location based timezones (daijy via rohini)

PIG-5312: Uids not set in inner schemas after UNION ONSCHEMA (tmwoodruff via knoguchi)

PIG-5300: hashCode for Bag needs to be order independent (knoguchi)

PIG-5318: Unit test failures on Pig on Spark with Spark 2.2 (nkollar via szita)

PIG-5201: Null handling on FLATTEN (knoguchi)

PIG-5315: pig.script is not set for scripts run via PigServer (satishsaley via rohini)
